HomeServer/charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
spec:
  ingressClassName: public
  tls:
  - hosts:
    - gpmaga.com
    - stakswipe.com
    - mitchellcookbook.com
    - grantmoisturemeter.com
    - llasearch.com
    - mitchellho.me
    - mikeychloe.com
    # - api.stakswipe.com
    # - api.celniker.com
    # - api.mitchellvault.com
    # - api.celniker.xyz
    secretName: quickstart-example-tls
  rules:
  - host: gpmaga.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-server-homeserver
            port:
              number: 80
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homeserver
            port:
              number: 80
  - host: grantmoisturemeter.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: threesixty
            port:
              number: 80
  - host: llasearch.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: threesixty
            port:
              number: 80
  - host: stakswipe.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: recipes
            port:
              number: 8080
  - host: mitchellcookbook.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: recipes
            port:
              number: 8080
  - host: mitchellho.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-assistant
            port:
              number: 8080
  - host: mikeychloe.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wedding-website-frontend
            port:
              number: 80
  # - host: api.celniker.com
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: cel-vault
  #           port:
  #             number: 80
  # - host: api.celniker.xyz
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: cel-vault
  #           port:
  #             number: 80
  # - host: api.mitchellvault.com
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: mitchell-vault
  #           port:
  #             number: 80
